# File-zipper

./: CMakeLists.txt  HuffmanNode.cpp  HuffmanNode.h  HuffmanTree.cpp  HuffmanTree.h  MinHeap.cpp  MinHeap.h  bitIO.cpp  bitIO.h  compressed.huf  frequency_counter.cpp  frequency_counter.h  main.cpp  original.txt  readme.md  sample.txt
